--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title> Sarandeep Singh | Frontend Web Developer </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
-    <link rel="stylesheet" href="stylesheet.css/setup_system.css?" type="text/css">
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="assets/img/favicon.jpg" type="image/jpg"/> 
 </head>
