--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name='viewport' content='width=device-width initial-scale=1 shrink-to-fit=no'/>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="assets/img/favicon.jpg" type="image/jpg"/> 
+    <link rel="shortcut icon" href="assets/img/favicon.JPG" type="image/jpg"/> 
 </head>
 <body>
 	<nav>
